server/public/styles.css
@font-face {
  font-family: retro;
  src: url('/fonts/retro.ttf');
}

button,
input {
  font-family: 'retro', sans-serif;
}

table *,
table .MuiTableCell-root {
  font-family: 'retro', sans-serif;
  color: white;
  letter-spacing: 0.1rem;
}

th.MuiTableCell-root {
  font-size: 1.5rem;
  font-weight: bold;
}

button:hover {
  cursor: pointer;
}

.homeForm {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}

input#playerName {
  width: 20rem;
  height: 3rem;
  font-size: 1.5rem;
  text-align: center;
  letter-spacing: 0.1rem;
  text-decoration: none;
  border: 3px solid white;
  background-color: transparent;
  color: white;
  margin-bottom: 3rem;
}

input#playerName::placeholder {
  color: white;
}

input#playerName:focus {
  outline: none;
  background-color: rgba(0, 0, 0, 0.5);
}

.startButton {
  width: 20rem;
  height: 3rem;
  margin-top: 3rem;
  background-color: transparent;
  border: 3px solid white;
  color: white;
  font-size: 1.5rem;
  letter-spacing: 0.1rem;
}

.green-text {
  color: green;
}

.red-text {
  color: red;
}

.gray-text {
  color: gray;
}

.outline-none {
  outline: none;
}

@keyframes flash-caret {
  0%,
  100% {
    opacity: 0;
  }

  50% {
    opacity: 1;
  }
}

.caret {
  position: absolute;
  display: inline;
  animation-name: flash-caret;
  animation-iteration-count: infinite;
  animation-duration: 1s;
}

.animation {
  transform: scale(4, 4);
  position: absolute;
  bottom: 10%;
  pointer-events: none;
}

.reverse {
  transform: scale(4, 4) rotateY(180deg);
  position: absolute;
  bottom: 10%;
}

.left-sprite {
  left: calc(50% - 25rem);
}

.right-sprite {
  right: calc(50% - 25rem);
}

.no-scroll {
  overflow: hidden;
}

